Added Security Feature: OTP Service

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 CONTRACT_ADDRESS=0xA1b22861dd9B1Aa38364011C66B8701ebC551E01
+SMTP_USER=2200090018csit@gmail.com
+SMTP_PASS=uduo mryk tufi jubm
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
