--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "web3": "^4.16.0"
   }
 }
