--- a/frontend/amplify/.config/project-config.json
+++ b/frontend/amplify/.config/project-config.json
@@ -1,6 +1,6 @@
 {
-  "whyContinueWithGen1": "I find the Gen 1 CLI easier to use",
-  "projectName": "ZTBCFrontend",
+  "whyContinueWithGen1": "Prefer not to answer",
+  "projectName": "ZeroTrust",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
